@@ -5,49 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.menkalian</groupId>
-    <artifactId>logprocessor</artifactId>
-    <version>0.0.1-jdk11</version>
+    <artifactId>auriga</artifactId>
+    <version>0.0.1</version>
+    <packaging>pom</packaging>
 
-    <distributionManagement>
-        <repository>
-            <id>central</id>
-            <name>ec059f43b321-releases</name>
-            <url>http://server.menkalian.de:8081/artifactory/auriga</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>ec059f43b321-snapshots</name>
-            <url>http://server.menkalian.de:8081/artifactory/auriga</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <compilerArgs>
-                        <arg>-proc:none</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>jdk-8-target</module>
+        <module>jdk-11-target</module>
+    </modules>
 </project>
